[gd_scene load_steps=7 format=3 uid="uid://c2tvlusd36b78"]

[ext_resource type="Shader" path="res://pewpew.gdshader" id="1_n7s3m"]
[ext_resource type="Script" path="res://pew_pew.gd" id="2_a5fk2"]
[ext_resource type="Texture2D" uid="uid://dg8ay68aeyr2e" path="res://images/icon.svg" id="3_o88qc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_icqgq"]
shader = ExtResource("1_n7s3m")
shader_parameter/speed = 1.0
shader_parameter/tint = Vector4(1, 1, 0, 1)
shader_parameter/span = 0.3

[sub_resource type="ShaderMaterial" id="ShaderMaterial_og86f"]
shader = ExtResource("1_n7s3m")
shader_parameter/speed = 1.0
shader_parameter/tint = Vector4(1, 1, 0, 1)
shader_parameter/span = 0.5

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7cpb"]

[node name="PewPew" type="Area2D" groups=["pewpew"]]
material = SubResource("ShaderMaterial_icqgq")
collision_layer = 4
collision_mask = 2
script = ExtResource("2_a5fk2")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_og86f")
texture = ExtResource("3_o88qc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_f7cpb")

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ExplodeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_explode_timer_timeout"]
